<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.whitewoodcity</groupId>
    <artifactId>entity-builder</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <fxcity.version>0.0.6</fxcity.version>
        <javafx.plugin.version>0.0.6</javafx.plugin.version>
        <compiler.plugin.version>3.8.1</compiler.plugin.version>
        <main.class>entity.builder/com.whitewoodcity.Main</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.chengenzhao</groupId>
            <artifactId>fxcity</artifactId>
            <version>${fxcity.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>EntityBuilder</launcher>
                    <jlinkImageName>EntityBuilderImage</jlinkImageName>
                    <jlinkZipName>EntityBuilder</jlinkZipName>
                    <mainClass>${main.class}</mainClass>
                    <options>
                        <option>-XX:+UseZGC</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>